--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,13 +30,7 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
-	<!-- 프로젝트 시작시 index.jsp 호출 -->
-	<welcome-file-list> 
-		<welcome-file>/WEB-INF/views/index.jsp</welcome-file>
-	</welcome-file-list>
-
-
-	<!-- POST request 한글처리 -->
+		<!-- post request 한글처리 -->
 	<filter>
 		<filter-name>encoding</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -46,8 +40,4 @@
 		</init-param>
 	</filter>
 	
-	<filter-mapping>
-		<filter-name>encoding</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
 </web-app>
